<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_nav"
        android:title="@string/nav_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_responses"
        android:icon="@drawable/ic_responses"
        android:title="@string/nav_responses"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/nav_messages"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_eye"
        android:title="@string/nav_feed"
        app:showAsAction="ifRoom" />

</menu>
